--- a/less/imports/mixins/_variables.less
+++ b/less/imports/mixins/_variables.less
@@ -1,3 +1,6 @@
 /*************************************
 Variables used across less
 *************************************/
+@sidebar-bg: rgb(191,191,191);
+@content-bg: rgb(242,242,242);
+@navbar-bg: rgb(0,0,40);
