--- a/less/global.less
+++ b/less/global.less
@@ -4,6 +4,8 @@ Main less file used for imports
 
 @import "imports/mixins/_variables.less";
 
+@import "imports/layout/_layout.less";
 @import "imports/layout/_header.less";
-@import "imports/layout/_content.less";
+@import "imports/layout/_sidebar.less";
+@import "imports/layout/_main.less";
 @import "imports/layout/_footer.less";
