--- a/less/imports/layout/_header.less
+++ b/less/imports/layout/_header.less
@@ -1,3 +1,199 @@
 /*************************************
 Header styling
 *************************************/
+#logo {
+    margin: 24px 0 14px 0;
+    border: 0;
+    height: 30px;
+    width: auto;
+}
+
+nav {
+    background: @navbar-bg;
+	position: fixed;
+   /* padding: 0 15%;*/
+	left: 0;
+	top: 0;
+	right: 0;
+    z-index: 1000;
+    height: 71px;
+
+    .navbar-menu {
+    	padding: 0px;
+    }
+}
+
+nav div{
+	text-align: right;
+}
+
+nav ul {
+	float: right;
+	list-style-type: none;
+	padding-top: 30px;
+	margin: 0;
+}
+
+nav ul li {
+	display: block;
+	float: left;
+	font-family: 'Lato', 'Arial Black', sans-serif;
+	font-size: 12px;
+	font-weight:500;
+}
+
+nav ul li a {
+	color: #fff;
+	text-transform: uppercase;
+	text-decoration: none;
+    padding: 0 2px;
+	margin-left: 30px;
+	border-radius: 2px;
+	text-shadow: 0 0 3px rgba(0,0,0,.6);
+	transition: 0.2s all;
+	font-size: 8px;
+}
+
+nav ul li a:hover,
+nav ul li.active a,
+nav ul li a:focus{
+	border-bottom: 1px solid #fff;
+	color: #fff;
+	text-decoration: none;
+}
+
+
+#menuToggler {
+    position: fixed;
+    display: none;
+    top: 13px;
+    z-index: 1001;
+    right: 0;
+}
+
+#menuToggler:focus {
+    outline: none;
+}
+
+.menu-line {
+    width: 20px;
+    height: 2px;
+    background: #fff;
+    margin: 4px 0;
+    -o-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
+    -webkit-transition: all 0.2s ease-out;
+    -ms-transition: all 0.2s ease-out;
+    transition: all 0.2s ease-out;
+}
+
+.menu-expanded .menu-line:not(:first-child):not(:last-child) {
+    opacity: 0;
+}
+
+.menu-expanded .menu-line:first-child {
+    height: 3px;
+    -o-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+    -ms-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+}
+
+.menu-expanded .menu-line:last-child {
+    -o-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    margin-top: -13px;
+    height: 3px;
+}
+
+@media screen and (max-width: 768px) { 
+	body.menu-expanded {
+    	margin-top: 114px;
+	}
+
+	#menuToggler {
+        display: block;
+        background: transparent;
+        border: 0px;
+    }
+
+    button {
+	    background: none repeat scroll 0% 0% #111;
+	    vertical-align: top;
+	    color: #EEE;
+	    text-transform: uppercase;
+	    border: 0px none;
+	    font-family: "Lato","Arial Black",sans-serif;
+	    font-size:14px;
+	    background: rgb(0,0,40);
+	    font-weight: bold;
+	    line-height: 22px;
+	    padding: 4px 16px;
+	    margin-top: 8px;
+	    transition: all 0.2s ease 0s;
+	    height: 32px;
+	}
+
+    nav {
+        text-align: left;
+        padding: 0 16px;
+        height: 71px;
+    }
+
+    nav ul {
+        padding: 0;
+        float: none;
+        padding: 0px;
+        max-height: 0;
+        -o-transition: all 0.2s ease;
+        -moz-transition: all 0.2s ease;
+        -webkit-transition: all 0.2s ease;
+        -ms-transition: all 0.2s ease;
+        transition: all 0.2s ease;
+        display: block;
+        margin: 0 -16px;
+        overflow: hidden;
+        padding-top: 3px;
+    }
+
+    nav ul li.active a {
+        border: none;
+        background: #444;
+    }
+
+    .menu-expanded nav ul {
+        max-height: 114px;
+    }
+
+    #contact .center {
+        padding: 20px 16px 0;
+    }
+
+    nav ul li {
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
+
+    nav ul li a {
+        text-indent: 16px;
+        font-size: 14px;
+        display: block;
+        background: #7F7F7F;
+        margin: 0;
+        border-radius: 0;
+        width: 100%;
+        line-height: 38px;
+        height: 38px;
+    }
+
+    nav ul li a:hover {
+        border-bottom: 0;
+        background: #444;
+        text-decoration: none;
+    } 
+}
