--- a/less/imports/layout/_main.less
+++ b/less/imports/layout/_main.less
@@ -1,34 +1,6 @@
-@sidebar-bg: rgb(191,191,191);
-@content-bg: rgb(242,242,242);
-@navbar-bg: rgb(0,0,40);
-
-html,
-body,
-#sidebar-wrapper,
-#page-content-wrapper,
-.container-fluid,
-.row{
-	height: 100%;
-}
-
-body{
-	padding-top: 68px;	
-	font-size: 9px;
-	font-family: 'Lato', 'Arial Black', sans-serif;
-}
-
-#wrapper{
-	background-color: @sidebar-bg;
-}
-
-#sidebar-wrapper{
-	padding: 40px 0px;
-
-	#sidebar-nav{
-    	font-size: 11px;
-	}
-}
-
+/*************************************
+Main div layout
+*************************************/
 .remove-padding-left-right{
 	padding-left: 0px;
 	padding-right: 0px;
@@ -125,234 +97,6 @@ body{
     padding: 2px 10px;
     border-radius: 0px;
 }
-/*
-	begin - top navbar old */
-
-#logo {
-    margin: 24px 0 14px 0;
-    border: 0;
-    height: 30px;
-    width: auto;
-}
-
-nav {
-    background: @navbar-bg;
-	position: fixed;
-   /* padding: 0 15%;*/
-	left: 0;
-	top: 0;
-	right: 0;
-    z-index: 1000;
-    height: 71px;
-
-    .navbar-menu {
-    	padding: 0px;
-    }
-}
-
-nav div{
-	text-align: right;
-}
-
-nav ul {
-	float: right;
-	list-style-type: none;
-	padding-top: 30px;
-	margin: 0;
-}
-
-nav ul li {
-	display: block;
-	float: left;
-	font-family: 'Lato', 'Arial Black', sans-serif;
-	font-size: 12px;
-	font-weight:500;
-}
-
-nav ul li a {
-	color: #fff;
-	text-transform: uppercase;
-	text-decoration: none;
-    padding: 0 2px;
-	margin-left: 30px;
-	border-radius: 2px;
-	text-shadow: 0 0 3px rgba(0,0,0,.6);
-	transition: 0.2s all;
-	font-size: 8px;
-}
-
-nav ul li a:hover,
-nav ul li.active a,
-nav ul li a:focus{
-	border-bottom: 1px solid #fff;
-	color: #fff;
-	text-decoration: none;
-}
-
-#menuToggler {
-    position: fixed;
-    display: none;
-    top: 13px;
-    z-index: 1001;
-    right: 0;
-}
-
-#menuToggler:focus {
-    outline: none;
-}
-
-.menu-line {
-    width: 20px;
-    height: 2px;
-    background: #fff;
-    margin: 4px 0;
-    -o-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    -webkit-transition: all 0.2s ease-out;
-    -ms-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;
-}
-
-.menu-expanded .menu-line:not(:first-child):not(:last-child) {
-    opacity: 0;
-}
-
-.menu-expanded .menu-line:first-child {
-    height: 3px;
-    -o-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -webkit-transform: rotate(-135deg);
-    -ms-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-}
-
-.menu-expanded .menu-line:last-child {
-    -o-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    margin-top: -13px;
-    height: 3px;
-}
-
-@media screen and (max-width: 768px) { 
-	body.menu-expanded {
-    	margin-top: 114px;
-	}
-
-	#menuToggler {
-        display: block;
-        background: transparent;
-        border: 0px;
-    }
-
-    button {
-	    background: none repeat scroll 0% 0% #111;
-	    vertical-align: top;
-	    color: #EEE;
-	    text-transform: uppercase;
-	    border: 0px none;
-	    font-family: "Lato","Arial Black",sans-serif;
-	    font-size:14px;
-	    background: rgb(0,0,40);
-	    font-weight: bold;
-	    line-height: 22px;
-	    padding: 4px 16px;
-	    margin-top: 8px;
-	    transition: all 0.2s ease 0s;
-	    height: 32px;
-	}
-
-    nav {
-        text-align: left;
-        padding: 0 16px;
-        height: 71px;
-    }
-
-    nav ul {
-        padding: 0;
-        float: none;
-        padding: 0px;
-        max-height: 0;
-        -o-transition: all 0.2s ease;
-        -moz-transition: all 0.2s ease;
-        -webkit-transition: all 0.2s ease;
-        -ms-transition: all 0.2s ease;
-        transition: all 0.2s ease;
-        display: block;
-        margin: 0 -16px;
-        overflow: hidden;
-        padding-top: 3px;
-    }
-
-    nav ul li.active a {
-        border: none;
-        background: #444;
-    }
-
-    .menu-expanded nav ul {
-        max-height: 114px;
-    }
-
-    #contact .center {
-        padding: 20px 16px 0;
-    }
-
-    nav ul li {
-        display: block;
-        width: 100%;
-        text-align: left;
-    }
-
-    nav ul li a {
-        text-indent: 16px;
-        font-size: 14px;
-        display: block;
-        background: #7F7F7F;
-        margin: 0;
-        border-radius: 0;
-        width: 100%;
-        line-height: 38px;
-        height: 38px;
-    }
-
-    nav ul li a:hover {
-        border-bottom: 0;
-        background: #444;
-        text-decoration: none;
-    } 
-}
-
-/*
-	end - top navbar old
-*/
-
-#sidebar-wrapper ul li {
-    list-style-type: none;
-}
-
-#sidebar-nav > ul > li {
-	margin-bottom: 25px;
-}
-
-
-#primary-menu {
-    font-size: 11px;
-    padding-left: 0px;	
-    text-transform: uppercase;
-}
-
-ul.second-menu {
-    font-size: 9px;
-    padding-left: 15px;
-}
-
-
-#sidebar-wrapper a {
-    color: #000;
-}
-
 
 #content-title {
     background-color: @sidebar-bg;
@@ -360,13 +104,6 @@ ul.second-menu {
     text-transform: uppercase;
     font-weight: normal;
 }
-
-
-#primary-menu .active {
-	font-weight: bold;
-	text-decoration: underline;
-}
-
 
 .transactions-table {
 /*	line-height: 1.5;*/
@@ -490,6 +227,8 @@ ul.second-menu {
 	padding-right: 25px;
 	margin: 20px 0px;
 }
+
+
 
 @media screen and (max-width: 991px) { 
 	.transactions-table .table td:first-child {
