--- a/less/imports/layout/_main.less
+++ b/less/imports/layout/_main.less
@@ -306,6 +306,7 @@ input.cmn-toggle-round-flat + label {
   background-color: #dddddd;
   border-radius: 20px;
   transition: background 0.4s;
+  float: left;
 }
 input.cmn-toggle-round-flat + label:before,
 input.cmn-toggle-round-flat + label:after {
@@ -340,5 +341,5 @@ input.cmn-toggle-round-flat:checked + label:after {
 }
 
 .form-group.switch .text-uppercase {
-	padding: 4px 0 0;
+	padding: 4px 0 0 75px;
 }
