--- a/plps/sass/partials/layout/_content.scss
+++ b/plps/sass/partials/layout/_content.scss
@@ -1,3 +1,9 @@
 /*************************************
 Main layout styling
 *************************************/
+
+.wrapper {
+	max-width: 1000px;
+	padding: 0 10px;
+	margin: 0 auto;
+}
