--- a/plps/css/global.css
+++ b/plps/css/global.css
@@ -5,7 +5,7 @@ Main sass file used for imports
 Variables used across the website
 *************************************/
 .sprite-sprite, .sprite-close, .sprite-search_icon {
-  background-image: url('../img/sprite-s85f603233f.png');
+  background-image: url('/img/sprite-s85f603233f.png');
   background-repeat: no-repeat;
 }
 
@@ -172,17 +172,13 @@ Header styling
   width: 50px;
   height: 50px;
 }
-<<<<<<< HEAD
-.header .sub-nav .close-search span:hover {
-  background-position: 0 50px;
-}
 .header .sticky-nav {
   background: #00b6f0;
   opacity: 0.9;
 }
 .header .sticky-nav h2 {
   color: #ffffff;
-  padding: 18px 0;
+  padding: 12px 0;
   margin: 0;
   font-size: 22px;
   display: inline-block;
@@ -191,16 +187,34 @@ Header styling
   font-size: 12px;
   color: #d92032;
   letter-spacing: 0.75px;
-  padding: 0 30px;
+  padding: 10px 30px;
   margin: 8px 0 8px 35px;
   min-width: 216px;
   float: right;
   background: #ffffff;
   border-radius: 100px;
   text-align: center;
+  text-decoration: none;
 }
-=======
->>>>>>> c532ca8b2174b8f8696e389cc1aeee51ef8e2d3c
+.header .sticky-nav-links {
+  background: #00b7f2;
+  opacity: 0.9;
+}
+.header .sticky-nav-links ul {
+  padding: 0;
+  margin: 0;
+}
+.header .sticky-nav-links ul li {
+  list-style: none;
+  display: inline-block;
+}
+.header .sticky-nav-links ul li a {
+  font-size: 12px;
+  color: #ffffff;
+  letter-spacing: 0.75px;
+  padding: 10px 8px;
+  display: block;
+}
 
 body {
   background: #ccc;
