--- a/plps/sass/partials/layout/_footer.scss
+++ b/plps/sass/partials/layout/_footer.scss
@@ -1,3 +1,13 @@
 /*************************************
 Footer styling
 *************************************/
+
+footer {
+	.footer-links {
+		
+	}
+
+	.footer-info {
+
+	}
+}
