--- a/plps/sass/partials/layout/_content.scss
+++ b/plps/sass/partials/layout/_content.scss
@@ -1,6 +1,11 @@
 /*************************************
 Main layout styling
 *************************************/
+ul {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
 
 .wrapper {
 	max-width: 1000px;
