--- a/plps/sass/partials/layout/_content.scss
+++ b/plps/sass/partials/layout/_content.scss
@@ -9,6 +9,12 @@ ul {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
+	&.inline {
+		font-size: 0;
+		li {
+			display: inline-block;
+		}
+	}
 }
 
 .wrapper {
